--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <!-- Summary -->
     <h1>Naveen Kumar Bukya</h1>
     <p>
-        Results-driven Software Developer with over 2 years of experience in designing, developing, and <br>
-        optimizing scalable web applications. Expertise in Java, Spring Boot, React, SQL, and CI/CD automation. <br>
-        Strong background in backend development, API integration, and frontend design.
+        Results-driven Software Developer with over 2 years of experience in designing, developing, and </p>
+       <p> optimizing scalable web applications. Expertise in Java, Spring Boot, React, SQL, and CI/CD automation. </p>
+        <p> Strong background in backend development, API integration, and frontend design.
     </p>
 
     <!-- Education -->
